--- a/src/components/random-planet/random-planet.css
+++ b/src/components/random-planet/random-planet.css
@@ -1,6 +1,8 @@
 .random-planet {
   display: flex;
   padding: 1rem;
+  border: 1px solid #444;
+  margin-bottom: 1rem;
 }
 
 .random-planet .planet-image {
@@ -12,7 +14,6 @@
 
 .random-planet .list-group {
   margin: 1rem 0 0 1rem;
-  list-style: none;
 }
 
 .random-planet .list-group-item {
